<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tire_roller_control</name>
  <version>0.0.1</version>
  <description>Tire Roller Controller</description>
  <maintainer email="jpkim@koceti.re.kr">koceti</maintainer>
  <license>koceti</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>can_msgs</depend>
  <depend>ros2_socketcan</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
